@startuml user_contract

!pragma layout smetana
skinparam packageStyle rectangle
skinparam defaultFontName Inter

package "adapter.in.web.rest" {
  interface "UserRestController" <<RestController>> {
    + createUser(req: UserRequest): ResponseEntity<UserResponse>
    + updateUser(id: UUID, req: UserRequest): ResponseEntity<UserResponse>
    + deleteUser(id: UUID): ResponseEntity<Void>
    + getUserById(id: UUID): ResponseEntity<UserResponse>
    + onboardUser(req: UserOnboardRequest): ResponseEntity<UserResponse>
    + getNextQuestion(userId: UUID): ResponseEntity<QuizQuestionResponse>
    + submitAnswer(userId: UUID, req: SubmitAnswerRequest): ResponseEntity<SubmitAnswerResponse>
  }
}

package "adapter.in.web.graphql" {
  interface "UserGraphQLResolver" <<GraphQLResolver>> {
    + listUsers(filter: UserFilterInput): List<User>
  }
}

package "application.port.in" {
  interface "UserCommandService" <<Service>> {
    + createUser(req: UserRequest): User
    + updateUser(id: UUID, req: UserRequest): User
    + deleteUser(id: UUID): void
    + onboardUser(req: UserOnboardRequest): User
    + submitAnswer(userId: UUID, req: SubmitAnswerRequest): SubmitAnswerResponse
  }
  interface "UserQueryService" <<Service>> {
    + getUserById(id: UUID): User
    + listUsers(filter: UserFilterInput): List<User>
    + getNextQuestion(userId: UUID): QuizQuestionResponse
  }
}

package "adapter.out.persistence" {
  interface "UserRepository" <<Repository>> {
    + save(entity: User): User
    + findById(id: UUID): Optional<User>
    + findByExample(example: Example<User>): List<User>
    + deleteById(id: UUID): void
  }
}

"UserRestController"  ..> "UserCommandService" : uses
"UserRestController"  ..> "UserQueryService" : uses
"UserGraphQLResolver" ..> "UserQueryService" : uses
"UserCommandService"  ..> "UserRepository" : uses
"UserQueryService"    ..> "UserRepository" : uses

@enduml
